libcryptui 3.2.2:
 * Fix GSettings conversion

libcryptui 3.2.0:
 * Initial stable release

libcryptui 3.1.91:
 * Port to GSettings instead of GConf
 * Build fixes

libcryptui 3.1.4:
 * Initial release of libcryptui as a separate module